--- a/Online-Test/src/main/resources/application.properties
+++ b/Online-Test/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/online-test?useSSL=false&allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=suraj@2595
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
